# naw_tools

./: .gitignore  Dockerfile  chasse.py  formula.py  guerre.py  justfile  pyproject.toml  requirements.txt  server.py  streamlit_app.py
flask/: server.py
flask/templates/: _formhelpers.html  chasse.html  guerre.html
naw_tools/: chasse.py  formula.py  guerre.py  guerre2.py
nawminator/: __init__.py  app.py  army.py  battle.py  interface.py  levels.py  utils.py  war.py
templates/: rc.html
tests/: test_army.py  test_levels.py  test_war.py
tests/war/: test_battle.py
