[tool.poetry]
name = "naw_tools"
version = "0.1.0"
description = ""
authors = ["Vivien Robert <vivienrobertbarbe@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.9.0"
scipy = "^1.6.3"
Flask = "^2.0.1"
Flask-WTF = "^0.15.1"
black = "^21.7b0"
Flask-Bootstrap4 = "^4.0.2"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
