[tool.poetry]
name = "naw_tools"
version = "0.1.0"
description = ""
authors = ["Vivien Robert <vivienrobertbarbe@gmail.com>"]
packages = [
    {include = "naw_tools"}
]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
pandas = "^1.3.4"
scipy = "^1.8.1"
protobuf = "3.20.*"
WTForms = "^3.0.1"
loguru = "^0.6.0"

[tool.poetry.group.flask_app]
optional = true

[tool.poetry.group.flask_app.dependencies]
Flask = "^2.0.1"
Flask-WTF = "^0.15.1"
Flask-Bootstrap4 = "^4.0.2"

[tool.poetry.group.streamlit_app]
optional = true

[tool.poetry.group.streamlit_app.dependencies]
streamlit = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
